<resources>
    <string name="app_name">Humaid_Abdulla_Practical2A</string>
    <string name="add_customer">Add Customer</string>
    <string name="display_customers">Display Customers</string>
    <string name="delete_customer">Delete Customer</string>
    <string name="enter_the_details_to_add_customer">Enter the details to add Customer</string>
    <string name="hint_id">ID</string>
    <string name="hint_preference">Preference</string>
    <string name="hint_name">Name</string>
    <string name="add">Add</string>
    <string name="enter_customer_id_to_delete">Enter Customer Id to delete</string>
    <string name="delete">Delete</string>
</resources>