<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddActivity">
        <TextView
            android:id="@+id/tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_margin="20dp"
            android:text="@string/enter_the_details_to_add_customer"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tittle"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint_id">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/idEd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputId"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint_name">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputName"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint_preference">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/prefEd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/ic_button_background"
            android:textColor="@color/colorWhite"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/add"/>
    </RelativeLayout>
</layout>